# meoww

./: .copier-answers.yml  .envrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  duties.py  environment.yml  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
config/: ruff.toml
docs/.overrides/partials/: comments.html
scripts/: gen_credits.py
src/meoww/: __init__.py  __main__.py  cli.py  debug.py  midi.py  new_midi.py  separation.py  split_join.py  spotify.py
tests/: __init__.py  test_cli.py
