[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "meoww"
description = "Finally, a cat-astrophic rendition of your favorite songs!"
authors = [{name = "vandyG", email = "vandy.goel23@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0.2",
    "scipy>=1.14.1",
    "h5py>=3.12.1",
    "tensorflow-cpu==2.10",
    "tensorflow-directml-plugin>=0.4.0.dev230202",
    "demucs>=4.0.1",
]

[project.urls]
Homepage = "https://vandyG.github.io/meoww"
Documentation = "https://vandyG.github.io/meoww"
Changelog = "https://vandyG.github.io/meoww/changelog"
Repository = "https://github.com/vandyG/meoww"
Issues = "https://github.com/vandyG/meoww/issues"
Discussions = "https://github.com/vandyG/meoww/discussions"
Gitter = "https://gitter.im/meoww/community"
Funding = "https://github.com/sponsors/vandyG"

[project.scripts]
meoww = "meoww.cli:main"

[tool.pdm]
version = {source = "scm"}
plugins = [
    "pdm-multirun",
]

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.10"]
ci-quality = ["meoww[duty,docs,quality,typing,security]"]
ci-tests = ["meoww[duty,tests]"]
docs = [
    "black>=23.9",
    "markdown-callouts>=0.3",
    "markdown-exec>=1.7",
    "mkdocs>=1.5",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-committers-plugin-2>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.4",
    "mkdocs-minify-plugin>=0.7",
    "mkdocstrings[python]>=0.23",
    "tomli>=2.0; python_version < '3.11'",
]
maintain = [
    "black>=23.9",
    "blacken-docs>=1.16",
    "git-changelog>=2.3",
]
quality = [
    "ruff>=0.0",
]
tests = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.3",
]
typing = [
    "mypy>=1.5",
    "types-markdown>=3.5",
    "types-pyyaml>=6.0",
]
security = [
    "safety>=2.3",
]
test = [
    "librosa>=0.10.2.post1",
    "soundfile>=0.12.1",
]
